@@ -1,6 +1,9 @@
 2010-03-26  nineties <nineties48@gmail.com>
 
 	* added README
+	* rlc1:
+	    added regalloc.rl
+	    implemented liveness analysis
 
 2010-03-25  nineties <nineties48@gmail.com>
 
